Supressing page level scrollbars while minimum width is satisfied to compensate for trivial rounding issues in layout

--- a/deckbuilder.css
+++ b/deckbuilder.css
@@ -15,6 +15,11 @@ body,html{
 body{
 	background-color:#red;
 }
+@media only screen and ( min-width:1510px ){
+	body{
+		overflow:hidden;
+	}
+}
 
 html,body,div,span,input,select,table,img{
 	margin:0em;
